pkg/apis/fanplane/v1alpha1/testdata/gateway/invalid-fields.yaml
apiVersion: fanplane.io/v1alpha1
kind: Gateway
metadata:
  name: falcon
spec:
  listener:
    port: 443
    protocol: HTTPS

  routes:
  - type: CONSUL_ERROR
    match: /promotion/v1
    service:
      name: promotion
      tag: master
    rewrite:
      uri: /promotion/v1/
