pkg/apis/fanplane/v1alpha1/testdata/gateway/invalid-structure.yaml
apiVersion: networking.fanplane.io/v1alpha1
kind: Gateway
metadata:
  name: falcon
spec:
  routes:
  - match: /promotion/v1
    route:
      type: CONSUL_ERROR
      service:
        name: promotion
        tag: master
      rewrite:
        uri: /promotion/v1/
